<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.dashboard.BookAppointment.healthseeker.F1Questions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1 = Always, 2 = Often, 3 = Sometimes, 4 = Rarely, 5 = Never"
                android:padding="12dp"
                android:gravity="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/patterniiregular"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow1"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:padding="12dp"
                    android:id="@+id/s1"
                    android:progress="0"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/canskip"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_2"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:padding="12dp"
                    android:progress="0"
                    android:id="@+id/s2"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/readytoeat"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_3"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:id="@+id/s3"
                    android:padding="12dp"
                    android:progress="0"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/gratifiedhunger"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_4"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:padding="12dp"
                    android:progress="0"
                    android:id="@+id/s4"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/fuller"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_5"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:padding="12dp"
                    android:id="@+id/s5"
                    android:progress="0"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/arethere"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_6"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:id="@+id/s6"
                    android:padding="12dp"
                    android:progress="0"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/digestion"
                    android:textColor="@color/appoinment_red"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/ifbelow_7"
                    android:textStyle="italic" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:max="5"
                    android:id="@+id/s7"
                    android:padding="12dp"
                    android:progress="0"
                    android:progressTint="@color/appoinment_red"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/app_color"
                        android:textStyle="italic|bold"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>